# poets

./: LICENSE  contributors.txt
doc/dj_case/: 4djs.con  FourDJs.pce  FourDJsMonthly.rep  Makefile  p.tex
doc/install-instructions/: install.tex  refs.bib
doc/poets-techreport/: Makefile  arch.tex  conclusion.tex  example.csl  implementation.lhs  introduction.tex  muerp.tex  mylhs2tex.lhs  ont.tex  origArch.tex  poets.tex  prelude.tex  refs.bib  rep.tex  tr.tex  usecase.tex
doc/poets-techreport/muERP/contracts/: DSPrelude.csl  Prelude.csl  Purchase.csl  Sale.csl
doc/poets-techreport/muERP/ontologies/: Contract.pce  Data.pce  Report.pce  Transaction.pce
doc/poets-techreport/muERP/reporting/: BalanceSheet.rep  DSPrelude.rep  IncomeStatement.rep  Prelude.rep  TopNCustomers.rep  UnpaidInvoices.rep
doc/poets-techreport/muERP/reporting/System/: ContractTemplates.rep  ContractTemplatesByType.rep  Me.rep
doc/poets-techreport/ont/: Contract.pce  Data.pce  Event.pce  Report.pce  Transaction.pce
src/haskell/: LICENSE  poets.cabal
src/haskell/defs/contracts/: Prelude.csl
src/haskell/defs/data/: Contract.pce  Event.pce
src/haskell/defs/reports/: Prelude.rep
src/haskell/exe-src/: ContractUploader.hs  PQuery.hs  PServer.hs  Parrot.hs
src/haskell/exe-src/PServer/: Thrift.hs
src/haskell/exe-src/PServer/Thrift/: Decode.hs  Encode.hs
src/haskell/src/Poets/: Config.hs  Contracts.hs  Reporting.hs
src/haskell/src/Poets/Contracts/Language/CSL/: Interpreter.hs  Parser.hs  Render.hs  TypeChecker.hs
src/haskell/src/Poets/Contracts/Language/CSL/Analysis/: ExpectedTransactions.hs
src/haskell/src/Poets/Contracts/Language/CSL/Evaluation/: Substitute.hs
src/haskell/src/Poets/Contracts/Language/CSL/Typing/: Inference.hs  Match.hs  Simplify.hs
src/haskell/src/Poets/Reporting/: Interface.hs  Loader.hs  Report.hs  ReportInitException.hs  ReportMonad.hs
src/haskell/src/Poets/Reporting/Language/: EReport.hs  Parrot.hs
src/haskell/src/Poets/Reporting/Language/Parrot/: Desugar.hs  FreeVars.hs  FreshVar.hs  Parser.hs  ReportLibrary.hs  Syntax.hs  Typing.hs
src/haskell/src/Poets/Reporting/Language/Parrot/Compiler/: BasicValue.hs  Haskell.hs  Interface.hs  MetaInterface.hs
src/haskell/src/Poets/Reporting/Language/Parrot/Typing/: BasicType.hs  Decomp.hs  Entailment.hs  ExtendedRecords.hs  Inference.hs  Instance.hs  PolyType.hs  Rename.hs  TypeAlias.hs  TypingMonad.hs
src/haskell/src/Poets/Reporting/Language/Parrot/Typing/Simplify/: AtomicDecomp.hs  AtomicTypes.hs  FieldConstraints.hs  FuhMishra.hs  Match.hs  Simplify.hs  SubtypeConstraints.hs
src/haskell/test/contracts/: StressTest.hs  Test.hs  sale.csl  test.contract  test.csl
src/haskell/test/eventlog/: Test.hs
src/haskell/test/reporting/: Loader.hs  Test.hs  Translation.hs  Typing.hs
src/haskell/test/rules/: DplParserTest.hs  Lrl.hs
src/haskell/test/suites/: Poets_Test.hs
src/haskell/test/suites/Poets/: Contracts_Test.hs  Data_Test.hs  Reporting_Test.hs
src/haskell/test/suites/Poets/Contracts/: Language_Test.hs
src/haskell/test/suites/Poets/Contracts/Language/: CSL_Test.hs
src/haskell/test/suites/Poets/Contracts/Language/CSL/: Aux.hs  Evaluator_Test.hs  Parser_Test.hs
src/haskell/test/suites/Poets/Data/: Type_Gen.hs  Type_Test.hs  Value_Gen.hs  Value_Test.hs
src/haskell/test/suites/Poets/Reporting/: Language_Test.hs
src/haskell/test/suites/Poets/Reporting/Language/: Parrot_Test.hs
src/haskell/test/suites/Poets/Reporting/Language/Parrot/: Evaluate_Test.hs
src/haskell/test/suites/Poets/Reporting/Language/Parrot/Typing/: Simplify_Test.hs
src/haskell/thrift/: Makefile  fixthrifthaskellcode  poets-thrift.cabal
src/java/: README  checkstyle_config.xml
src/java/bootstrap/: build.xml  legejunglen-setup.ini  setup.ini
src/java/bootstrap/src/dk/diku/poets/bootstrap/: Bootstrap.java
src/java/poetsio/: build.xml
src/java/poetsio/src/dk/diku/poets/authentication/: AuthServlet.java  AuthServletRmi.java  AuthServletService.java  BCrypt.java  UserInformation.java  (+1 more)
src/java/poetsio/src/org/json/: JSONObject.html
src/java/tablet/: AndroidManifest.xml  build.xml  tags
src/java/tablet/res/drawable-hdpi/: border.xml
src/java/tablet/res/layout/: main.xml
src/java/tablet/res/values/: strings.xml
src/thrift/: Makefile  contracts.thrift  data.thrift  entities.thrift  poets.thrift  reporting.thrift  rules.thrift  type.thrift  value.thrift
usecases/4djs/: 4djs.config
usecases/4djs/contracts/: EventContract.csl
usecases/4djs/layouts/: DefaultLayout.pll
usecases/4djs/ontologies/: Contract.pce  Data.pce  Report.pce  Transaction.pce
usecases/4djs/reporting/: ActiveContracts.rep  AllContracts.rep  CashFlowStatement.rep  ContractHistory.rep  ContractSummary.rep  ContractsByCustomer.rep  DJHistories.rep  FilterReportNames.rep  GetCompany.rep  GetConfig.rep  GetContractTemplates.rep  GetEntity.rep  GetReportNames.rep  GetReportTags.rep  Invoices.rep  JobsPrWeek.rep  JobsWithoutDJ.rep  OutstandingQuotes.rep  PaidInvoices.rep  PendingPayment.rep  UnpaidInvoices.rep
usecases/4djs/rules/: goods.lrl  services.lrl  vat.pce  vatdeterminants.pce
usecases/legejunglen/: Kalender-system.xls  krav-gui-spec  noter  setup.ini
usecases/legejunglen/contracts/: Arrangement.csl  DSPrelude.csl
usecases/legejunglen/ontologies/: Contract.pce  Data.pce  Orders.pce  Report.pce  Transaction.pce
usecases/legejunglen/reporting/: ContractTemplateNames.rep  DSPrelude.rep  DailySchedule.rep  MonthlyOverview.rep  Schedule.rep  SuggestionList.rep
usecases/legejunglen/reporting/System/: ConfirmedParticipants.rep  ContractHistory.rep  ContractSummary.rep  ContractTemplatesByType.rep  GetEntity.rep  ReportNames.rep  ReportNamesByTags.rep
usecases/muERP/: muERP.config
usecases/muERP/contracts/: DSPrelude.csl  Purchase.csl  Sale.csl
usecases/muERP/ontologies/: Contract.pce  Data.pce
usecases/muERP/reporting/: CashFlowStatement.rep  DSPrelude.rep  IncomeStatement.rep  Inventory.rep  VATReport.rep
usecases/muERP/reporting/System/: ContractTemplates.rep  Contracts.rep  Entities.rep  EntitiesByType.rep  ReportTags.rep
(+62 files in other folders)
